--- a/cmd/lambda/TCR/get_rating_vote_list/config/BUILD.bazel
+++ b/cmd/lambda/TCR/get_rating_vote_list/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//internal/app/tcr_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
         "//internal/pkg/utils:go_default_library",
+        "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/TCR/rating_vote_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
     ],
