--- a/internal/app/tcr_attributes/BUILD.bazel
+++ b/internal/app/tcr_attributes/BUILD.bazel
@@ -9,6 +9,8 @@ go_library(
         "objective.go",
         "objective_votes_info.go",
         "project.go",
+        "proxy_votes.go",
+        "proxy_votes_info.go",
         "rating_vote.go",
     ],
     importpath = "BigBang/internal/app/tcr_attributes",
