--- a/test/constants/BUILD.bazel
+++ b/test/constants/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
         "objective.go",
         "profile.go",
         "project.go",
+        "proxy_votes.go",
         "rating_vote.go",
     ],
     importpath = "BigBang/test/constants",
