--- a/cmd/lambda/feed/feed_update_post_rewards/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_update_post_rewards/config/BUILD.bazel
@@ -7,6 +7,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/getstream_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/post_rewards_record_config:go_default_library",
     ],
