--- a/internal/app/feed_attributes/BUILD.bazel
+++ b/internal/app/feed_attributes/BUILD.bazel
@@ -28,5 +28,6 @@ go_library(
         "//internal/pkg/utils:go_default_library",
         "//vendor/github.com/ethereum/go-ethereum/common:go_default_library",
         "//vendor/github.com/jmoiron/sqlx/types:go_default_library",
+        "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
     ],
 )
