--- a/test/platform/getstream_config/BUILD.bazel
+++ b/test/platform/getstream_config/BUILD.bazel
@@ -1,19 +1,12 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load("@io_bazel_rules_go//go:def.bzl", "go_test")
 
-go_library(
-    name = "go_default_library",
-    srcs = ["test_getstream_client.go"],
-    importpath = "BigBang/test/platform/getstream_config",
-    visibility = ["//visibility:private"],
+go_test(
+    name = "go_default_test",
+    srcs = ["getstream_client_test.go"],
     deps = [
         "//internal/app/feed_attributes:go_default_library",
         "//internal/platform/getstream_config:go_default_library",
-        "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
+        "//test/constants:go_default_library",
+        "//vendor/github.com/stretchr/testify/suite:go_default_library",
     ],
-)
-
-go_binary(
-    name = "getstream_config",
-    embed = [":go_default_library"],
-    visibility = ["//visibility:public"],
 )
