--- a/cmd/lambda/TCR/update_delegate_votes/config/BUILD.bazel
+++ b/cmd/lambda/TCR/update_delegate_votes/config/BUILD.bazel
@@ -2,12 +2,12 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
-    srcs = ["update_actor_rating_votes.go"],
-    importpath = "BigBang/cmd/lambda/TCR/update_actor_rating_votes/config",
+    srcs = ["update_delegate_votes.go"],
+    importpath = "BigBang/cmd/lambda/TCR/update_delegate_votes/config",
     visibility = ["//visibility:public"],
     deps = [
         "//internal/pkg/error_config:go_default_library",
-        "//internal/platform/postgres_config/TCR/actor_rating_vote_account_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/actor_delegate_votes_account_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
     ],
