--- a/cmd/lambda/TCR/delete_proxy/config/BUILD.bazel
+++ b/cmd/lambda/TCR/delete_proxy/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/TCR/proxy_config:go_default_library",
         "//internal/platform/postgres_config/client_config:go_default_library",
+        "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
     ],
 )
 
