--- a/cmd/lambda/feed/get_actor_private_key/main/BUILD.bazel
+++ b/cmd/lambda/feed/get_actor_private_key/main/BUILD.bazel
@@ -3,12 +3,9 @@ load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 go_library(
     name = "go_default_library",
     srcs = ["main.go"],
-    importpath = "BigBang/cmd/lambda/TCR/add_proxy/main",
+    importpath = "BigBang/cmd/lambda/feed/get_actor_private_key/main",
     visibility = ["//visibility:private"],
-    deps = [
-        "//cmd/lambda/TCR/add_proxy/config:go_default_library",
-        "//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library",
-    ],
+    deps = ["//vendor/github.com/aws/aws-lambda-go/lambda:go_default_library"],
 )
 
 go_binary(
