--- a/cmd/lambda/TCR/tcr_table_creator/config/BUILD.bazel
+++ b/cmd/lambda/TCR/tcr_table_creator/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//internal/pkg/error_config:go_default_library",
         "//internal/platform/postgres_config/TCR/actor_delegate_votes_account_config:go_default_library",
         "//internal/platform/postgres_config/TCR/milestone_config:go_default_library",
+        "//internal/platform/postgres_config/TCR/milestone_validator_record_config:go_default_library",
         "//internal/platform/postgres_config/TCR/objective_config:go_default_library",
         "//internal/platform/postgres_config/TCR/principal_proxy_votes_config:go_default_library",
         "//internal/platform/postgres_config/TCR/project_config:go_default_library",
