--- a/cmd/lambda/TCR/delete_proxy/config/BUILD.bazel
+++ b/cmd/lambda/TCR/delete_proxy/config/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
+load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
     name = "go_default_library",
@@ -11,11 +11,4 @@ go_library(
         "//internal/platform/postgres_config/client_config:go_default_library",
         "//internal/platform/postgres_config/feed/actor_profile_record_config:go_default_library",
     ],
-)
-
-go_test(
-    name = "go_default_test",
-    srcs = ["delete_proxy_test.go"],
-    embed = [":go_default_library"],
-    deps = ["//vendor/github.com/stretchr/testify/assert:go_default_library"],
 )
