--- a/cmd/lambda/feed/feed_token_generator/config/BUILD.bazel
+++ b/cmd/lambda/feed/feed_token_generator/config/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "//cmd/lambda/common/auth:go_default_library",
         "//internal/app/feed_attributes:go_default_library",
         "//internal/pkg/error_config:go_default_library",
+        "//internal/platform/postgres_config/client_config:go_default_library",
         "//vendor/gopkg.in/GetStream/stream-go2.v1:go_default_library",
     ],
 )
